--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="menuHaut">
-        <p id="connexion"> Connexion</p>
+    <div class="menuHaut">
+        <p class="connexion"> Connexion</p>
     </div>
 
-    <div id="menuGauche">
+    <div class="menuGauche">
     </div>
 
-    <img id="logoNintendo" src="https://imagizer.imageshack.com/img924/4454/7mLsft.png">
-    <img id="recherche" src="https://imagizer.imageshack.com/img923/4355/WhwsIU.png">
+    <img class="logoNintendo" src="https://imagizer.imageshack.com/img924/4454/7mLsft.png">
+    <img class="recherche" src="https://imagizer.imageshack.com/img923/4355/WhwsIU.png">
 
     <table>
         <tr>
-            <td id="1">
+            <td class="1">
                 <img src="https://imagizer.imageshack.com/img924/389/m9E1K6.png">
                 <br>Gamme
                 <br>Nintendo
@@ -27,38 +27,38 @@
             </td>
         </tr>
         <tr>
-            <td id="jeux">
-                <img id="game" src="https://imagizer.imageshack.com/img923/8816/ntF0nQ.png">
+            <td class="jeux">
+                <img class="game" src="https://imagizer.imageshack.com/img923/8816/ntF0nQ.png">
                 <br> Jeux
             </td>
         </tr>
         <tr>
-            <td id="eshop">
+            <td class="eshop">
                 <img src="https://imagizer.imageshack.com/img922/7431/Q3IWyi.png">
                 <br> Nintendo
                 <br>eShop
             </td>
         </tr>
         <tr>
-            <td id="assist">
+            <td class="assist">
                 <img src="https://imagizer.imageshack.com/img923/8118/8wGV9t.png">
                 <br> Assistance
             </td>
         </tr>
         <tr>
-            <td id="store">
+            <td class="store">
                 <img src="https://imagizer.imageshack.com/img923/2789/5gv6vh.png">
                 <br> My Nintendo
                 <br>Store
             </td>
         </tr>
         <tr>
-            <td id="perso">
-                <img id="pers" src="https://imagizer.imageshack.com/img923/6067/lkEWat.png">
+            <td class="perso">
+                <img class="pers" src="https://imagizer.imageshack.com/img923/6067/lkEWat.png">
             </td>
         </tr>
         <tr>
-            <td id="points">
+            <td class="points">
                 ...
             </td>
         </tr>
